--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TP1lesdes)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(TP1lesdes main.cpp De.cpp De.h)
+add_executable(TP1lesdes main.cpp De.cpp De.h De100.cpp De100.h)
